--- a/src/assets/stylesheets/main.css
+++ b/src/assets/stylesheets/main.css
@@ -5,10 +5,15 @@
   --ebony-clay-brighter: #242938;
 
   --reddish-orange: #F2511B;
+  --reddish-orange-opacity-60: rgba(242, 81, 27, .6);
   --reddish-orange-brighter: #F06739;
 
+  /* Change this to rgba and reuse it */
   --pattens-blue: #E5F3FF;
+  --pattens-blue-opacity-80: rgba(229, 243, 255, .8);
   --bright-grey: #3C4350;
+
+  --black: rgba(0, 0, 0, .4);
 
   --color-primary: var(--ebony-clay);
   --color-primary-brighter: var(--ebony-clay-brighter);
@@ -35,7 +40,8 @@
   --font-weight-bold: 700;
   --font-weight-extra-bold: 800;
 
-  --drop-shadow: drop-shadow(0 0 0.14rem black);
+  --drop-shadow: drop-shadow(0 0 0.14rem var(--black));
+  --box-shadow: 0 3px 4px var(--black);
 
   --font-family: 'Lato', system-ui, sans-serif;
 
